Fix: willAnimate logic for removing flickering cards

--- a/styles.css
+++ b/styles.css
@@ -742,37 +742,10 @@ pre {
   margin-left: calc(var(--lp) * -1);
   padding: var(--sp11) 0;
 
-  /* ANIMATION SETTINGS: */
   /* Determine the length of the scroll container
     - the container height */
   --ch: min(270dvw, calc(2.7 * var(--page-mw))); /* ! dvW! */
-
-  --scroll-container-offset: 50dvw; /* ! dvW! */
-  --view-offset: 30dvw; /* ! dvW! */
-  --card-height: clamp(320px, 24.7vw, 480px); /* 24.7 - 14.7vw */
-  --z-offset: 5px;
-  --y-offset: calc(var(--card-height) + 50px);
-  --max-index: 6; /* Number of cards - 1 */
-  --total-y-offset: calc(
-    var(--y-offset) * var(--max-index) + var(--view-offset)
-  );
-  --total-z-offset: calc(var(--z-offset) * var(--max-index));
-
   height: var(--ch);
-
-  /* Determine the inset:
-    - adjustment of the scrollport, or
-    - length of the animation timeline */
-  --step1: calc(var(--ch) - 60vh);
-  --step2: calc(var(--ch) - 80vh);
-  --step3: calc(var(--ch) - 100vh);
-  --step4: calc(var(--ch) - 200vh);
-
-  --inset1: var(--step1) 10vh; /* 20vh - 60vh */
-  --inset2: var(--step2) 30vh; /* 30vh - 80vh */
-  --inset3: var(--step3) 40vh; /* 40vh - 100vh */
-  --inset4: var(--step4) 100vh; /* 100vh - 200vh */
-
   perspective: 500px;
 }
 
@@ -840,8 +813,13 @@ pre {
 }
 
 #cards-container {
-  position: absolute;
-  inset: 0;
+  position: relative;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--sp1x0);
 
   /* ANIMATION SETTINGS: */
   perspective: 500px; /* Enhanced perspective effect at children level */
@@ -867,16 +845,6 @@ pre {
 }
 
 .moveUpAndBack {
-  /* Apply stacked effect based on DOM position */
-  --stack-y: calc(var(--view-offset) + var(--y-offset) * var(--card-index, 0));
-  --stack-z: calc(var(--card-index, 0) * var(--z-offset));
-  transform: translate3d(0, var(--stack-y), var(--total-z-offset));
-  /* Create the staggered view timeline effect */
-  --view-start: calc(
-    var(--scroll-container-offset) + var(--total-y-offset) - var(--stack-y)
-  );
-  --view-end: calc(var(--stack-y) - var(--stack-z));
-
   animation-name: moveUpAndBack;
   animation-fill-mode: both;
   animation-timing-function: ease-in-out;
@@ -888,6 +856,38 @@ pre {
 }
 
 @supports (animation-timeline: view()) {
+  #container-content2 {
+    /* ANIMATION SETTINGS: */
+    --scroll-container-offset: 50dvw; /* ! dvW! */
+    --view-offset: 30dvw; /* ! dvW! */
+    --card-height: clamp(320px, 24.7vw, 480px); /* 24.7 - 14.7vw */
+    --z-offset: 5px;
+    --y-offset: calc(var(--card-height) + 50px);
+    --max-index: 6; /* Number of cards - 1 */
+    --total-y-offset: calc(
+      var(--y-offset) * var(--max-index) + var(--view-offset)
+    );
+    --total-z-offset: calc(var(--z-offset) * var(--max-index));
+
+    /* Determine the inset:
+      - adjustment of the scrollport, or
+      - length of the animation timeline */
+    --step1: calc(var(--ch) - 60vh);
+    --step2: calc(var(--ch) - 80vh);
+    --step3: calc(var(--ch) - 100vh);
+    --step4: calc(var(--ch) - 200vh);
+
+    --inset1: var(--step1) 10vh; /* 20vh - 60vh */
+    --inset2: var(--step2) 30vh; /* 30vh - 80vh */
+    --inset3: var(--step3) 40vh; /* 40vh - 100vh */
+    --inset4: var(--step4) 100vh; /* 100vh - 200vh */
+  }
+
+  #cards-container {
+    position: absolute;
+    top: 0;
+  }
+
   .card {
     position: absolute;
     top: calc(3.5em + 50% - var(--card-height) / 2);
@@ -898,8 +898,18 @@ pre {
     margin: auto;
     padding: 1em;
 
-    /* Animation settings: 
-    transform: translate3d(0, var(--stack-y), var(--total-z-offset)); */
+    /* Animation settings: */
+    /* Apply stacked effect based on DOM position */
+    --stack-y: calc(
+      var(--view-offset) + var(--y-offset) * var(--card-index, 0)
+    );
+    --stack-z: calc(var(--card-index, 0) * var(--z-offset));
+    /* ! transform: translate3d(0, var(--stack-y), var(--total-z-offset)); */
+    /* Create the staggered view timeline effect */
+    --view-start: calc(
+      var(--scroll-container-offset) + var(--total-y-offset) - var(--stack-y)
+    );
+    --view-end: calc(var(--stack-y) - var(--stack-z));
   }
 
   .slideForward,
